@@ -53,6 +53,11 @@ name is not strictly necessary, but can be useful to apply filtering based on wh
 the message was received from.
 <li>$InputPTCPServerBindRuleset &lt;name&gt;<br>
 Binds specified ruleset to next server defined.
+<li>$InputPTCPHelperThreads &lt;number&gt;<br>
+Number of helper worker threads to process incoming messages. These
+threads are utilized to pull data off the network. On a busy system, additional
+helper threads (but not more than there are CPUs/Cores) can help improving
+performance. The default value is two.
 <li>$InputPTCPServerListenIP &lt;name&gt;<br>
 On multi-homed machines, specifies to which local address the next listerner should
 be bound.
