@@ -7,6 +7,8 @@ Version 6.1.3  [DEVEL] (rgerhards), 2010-12-??
   Now 128, what should result in performance improvement (less API
   calls) on busy systems. Most importantly affects imtcp.
 - imptcp now supports non-cancel termination mode, a plus in stability
+- imptcp speedup: multiple worker threads can now be used to read data
+- new directive $InputIMPTcpHelperThreads added
 - bugfix: fixed build problems on some platforms
   namely those that have 32bit atomic operations but not 64 bit ones
 - bugfix: local hostname was pulled too-early, so that some config 
